overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
     padding: 15px;
     min-height: 100%;
     box-sizing: border-box;
+    overflow: hidden;
   }
   #header-content {
     width: 100%;
